Prevent NPE for views without author (#213)
* Prevent NPE for views without author

* Update Vertx to prevent vulnerability, update JDK to 11

* Update JDK to 11, update WildFly to 14, fix project to run on newer environment

* Update Cargo version to support WF 14

* Update Cargo config

* Exclude JSON-B serialization