@@ -98,9 +98,9 @@
       <maven.war.plugin.version>3.0.0</maven.war.plugin.version>
       <maven.wildfly.plugin.version>1.2.2.Final</maven.wildfly.plugin.version>
       <maven.failsafe.plugin.version>2.22.0</maven.failsafe.plugin.version>
-      <maven.cargo.plugin.version>1.6.9</maven.cargo.plugin.version>
+      <maven.cargo.plugin.version>1.6.11</maven.cargo.plugin.version>
 
-      <version.wildfly>13.0.0.Final</version.wildfly>
+      <version.wildfly>14.0.1.Final</version.wildfly>
       <wildfly.dir>${project.build.directory}/wildfly-${version.wildfly}</wildfly.dir>
    </properties>
    <modules>
@@ -182,14 +182,14 @@
                <version>${maven.cargo.plugin.version}</version>
                <configuration>
                   <container>
-                     <containerId>wildfly13x</containerId>
+                     <containerId>wildfly14x</containerId>
                      <type>installed</type>
                      <home>${wildfly.dir}</home>
                   </container>
                   <deployer/>
                   <configuration>
                      <properties>
-                        <cargo.jvmargs>-Xmx1g -Xms1g</cargo.jvmargs>
+                        <cargo.jvmargs>-Xmx1g -Xms1g --add-modules=java.se</cargo.jvmargs>
                      </properties>
                      <users>
                         <user>
